# langprobe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LANGSMITH-PARITY.md  LICENSE  PRODUCT.md  README.md  RESEARCH.md  TODOS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.impeccable/: hook.cache.json
.serena/: project.yml
deploy/helm/langprobe/: .helmignore  Chart.yaml  README.md  values-gke.yaml  values.yaml
deploy/helm/tracebility/: Chart.yaml  README.md  values-gke.yaml  values.yaml
deploy/k8s/dev-deps/: README.md  clickhouse.yaml  postgres.yaml  redis.yaml
deploy/k8s/gke-gateway/: README.md  gateway.yaml  healthcheckpolicy.yaml  httproute.yaml
deploy/operator/: README.md  crd.yaml  example-cr.yaml  operator-deployment.yaml
designs/agent-replay/: index.html
docs/: getting-started.md  multi-tenancy-cutover.md  multi-tenancy-office-hours.md  multi-tenancy-spec.md
docs/superpowers/runbooks/: gke-bootstrap.md
infra/: .env.example  README.md  clickhouse-init.sh  docker-compose.yml
schemas/clickhouse/: 0000_schema_migrations.sql  0001_runs_and_spans.sql  0002_eval_scores.sql  0003_replay_captures.sql  0004_dataset_items.sql  0005_billing_meters.sql  0006_tenant_columns.sql  0007_audit_log.sql  README.md
schemas/postgres/: README.md
schemas/postgres/migrations/: 0001_init.sql  (+26 more)
services/_shared/tenant/: pyproject.toml
services/_shared/tenant/langprobe_tenant/: audit.py  context.py  eval_concurrency.py  rate_limit.py  reconciler_audit.py  reconciler_quota.py  resolver.py  shard.py
services/_shared/tenant/tests/: conftest.py  test_eval_concurrency.py  test_quota.py  test_rate_limit.py  test_reconciler_quota.py  test_resolver.py  test_shard.py
services/_shared/tenant/tests/integration/: test_cross_org_isolation.py
services/_shared/tenant/tracebility_tenant/: __init__.py  audit.py  eval_concurrency.py  quota.py  rate_limit.py  reconciler_audit.py  reconciler_quota.py  resolver.py  shard.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/langprobe_api/: __init__.py  __main__.py  app.py  audit.py  auth.py  clickhouse_client.py  config.py  middleware.py  tenant_scope.py
services/api/langprobe_api/agent/: __init__.py  mcp_server.py  projections.py  tools.py
services/api/langprobe_api/llm/: __init__.py  gateway.py  types.py
services/api/langprobe_api/reliability/: __init__.py  metrics.py
services/api/langprobe_api/replay/: __init__.py  diff.py  executor.py  record.py  service.py
services/api/langprobe_api/routers/: admin_audit.py  admin_quotas.py  agent_views.py  alerts.py  annotations.py  api_keys.py  comparisons.py  datasets.py  evals.py  feedback.py  feedback_keys.py  health.py  llm_credentials.py  luna_judges.py  members.py  metrics.py  oauth_signup.py  playground.py  poll_runs.py  projects.py  prompts.py  reliability.py  replay_runs.py  replays.py  run_actions.py  runs_query.py  saved_views.py  scim.py  sso.py  studio.py  threads_query.py  workspaces_me.py
services/api/tests/: conftest.py  test_property_org_id_in_where.py  test_tenant_scope.py
services/api/tests/integration/: test_migration_0023.py  test_migration_0024.py  test_prompts_template_messages.py
services/api/tests/live/: test_litellm_providers.py
services/api/tests/unit/: test_agent_projections.py  test_agent_tools.py  test_agent_views_endpoint.py  test_mcp_server.py  test_playground_create_validation.py  test_playground_render_messages.py  test_playground_resolve_messages.py  test_playground_role_mapping.py  test_prompt_response_shape.py  test_prompt_version_create_validation.py  test_reliability_endpoint.py  test_reliability_metrics.py  test_replay_diff.py  test_replay_endpoint.py  test_replay_executor.py  test_replay_record.py
services/api/tests/unit/llm/: test_audit_throttle.py  test_gateway_errors.py  test_gateway_happy.py  test_resolve_secret.py  test_types.py
services/api/tracebility_api/: __init__.py  __main__.py  app.py  audit.py  auth.py  clickhouse_client.py  config.py  middleware.py
services/api/tracebility_api/llm/: __init__.py  audit_throttle.py  gateway.py  types.py
services/api/tracebility_api/routers/: __init__.py  admin_audit.py  alerts.py  annotations.py  api_keys.py  auth.py  comparisons.py  datasets.py  evals.py  feedback.py  feedback_keys.py  health.py  llm_credentials.py  luna_judges.py  members.py  metrics.py  oauth_signup.py  playground.py  poll_runs.py  projects.py  prompts.py  replays.py  run_actions.py  runs_query.py  saved_views.py  scim.py  setup.py  sso.py  studio.py  threads_query.py
services/ingest-api/: Dockerfile  README.md  pyproject.toml
services/ingest-api/langprobe_ingest/: __init__.py  __main__.py  app.py  auth.py  config.py  enqueue.py  limits.py  redactor.py
services/ingest-api/langprobe_ingest/routers/: __init__.py  health.py  langsmith_shim.py  multipart.py  otel.py  runs.py
services/ingest-api/tests/: test_enqueue_shard.py
services/ingest-api/tracebility_ingest/: __init__.py  __main__.py  app.py  auth.py  config.py  enqueue.py  limits.py  redactor.py  schemas.py
services/ingest-api/tracebility_ingest/routers/: langsmith_shim.py  multipart.py  otel.py  runs.py
services/ingest-worker/: Dockerfile  README.md  pyproject.toml
services/ingest-worker/langprobe_worker/: __init__.py  __main__.py  app.py  config.py  consumer.py  writer.py
services/ingest-worker/tests/: test_writer_tenant.py
services/ingest-worker/tracebility_worker/: __init__.py  __main__.py  app.py  config.py  consumer.py  writer.py
services/migrate-langsmith/: README.md  pyproject.toml
services/migrate-langsmith/langprobe_migrate_langsmith/: __init__.py  cli.py
services/migrate-langsmith/tracebility_migrate_langsmith/: __init__.py  cli.py
services/migrator/: Dockerfile  run.sh
services/operator/: pyproject.toml
services/operator/langprobe_operator/: __init__.py  main.py  reconciler.py
services/operator/tracebility_operator/: __init__.py  main.py  reconciler.py
web/: Dockerfile  README.md  next.config.mjs  package.json
web/src/: middleware.ts
(+152 files in other folders)
