[project]
name = "tracebility"
version = "0.0.0"
description = "Self-hosted LLM observability + eval-rigor + agent-replay platform."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "tracebility contributors" }]

[tool.uv.workspace]
members = [
    "services/_shared/tenant",
    "services/ingest-api",
    "services/api",
    "services/ingest-worker",
    "services/migrate-langsmith",
]
# services/eval-orchestrator is referenced in the multi-tenancy spec but
# does not exist as a service yet. The per-org concurrency semaphore that
# the spec calls for lives in tracebility_tenant.eval_concurrency so the
# orchestrator can pick it up wholesale when it lands.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "PTH", "ERA"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["services"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = ["test_*.py"]
addopts = "-ra"
