[project]
name = "tracebility-api"
version = "0.0.0"
description = "tracebility control-plane API: auth, RBAC, projects, prompts, datasets, evals, audit log."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "asyncpg>=0.29",
    "orjson>=3.9",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.1",
    "clickhouse-connect>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracebility_api"]
