[project]
name = "tracebility-ingest-api"
version = "0.0.0"
description = "tracebility ingest API: OTel GenAI + LangSmith shim, enqueues to Redis."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "redis>=5.0",
    "asyncpg>=0.29",
    "orjson>=3.9",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "tracebility-tenant",
]

[tool.uv.sources]
tracebility-tenant = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracebility_ingest"]
