[project]
name = "langprobe-migrate-langsmith"
version = "0.0.1"
description = "CLI that reads LangSmith export JSONL and replays rows into a langprobe ingest host."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
]

[project.scripts]
tb-migrate-langsmith = "langprobe_migrate_langsmith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langprobe_migrate_langsmith"]
