[project]
name = "tracebility-operator"
version = "0.0.1"
description = "Kubernetes operator that reconciles a Tracebility CRD into the four-service tracebility stack."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.37",
    "kubernetes>=29.0",
]

[project.scripts]
tracebility-operator = "tracebility_operator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracebility_operator"]
