[project]
name = "langprobe-operator"
version = "0.0.1"
description = "Kubernetes operator that reconciles a Langprobe CRD into the four-service langprobe stack."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.37",
    "kubernetes>=29.0",
]

[project.scripts]
langprobe-operator = "langprobe_operator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langprobe_operator"]
