[project]
name = "tracebility-tenant"
version = "0.0.0"
description = "Multi-tenancy primitives shared by ingest-api, ingest-worker, api, and eval-orchestrator."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "clickhouse-connect[async]>=0.7",
    "orjson>=3.9",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracebility_tenant"]
